# Junita

./: .gitignore  404.html  Cargo.toml  DIAGNOSTICS_GUIDE.md  GPU_BACKEND_GUIDE.md  GPU_NETWORK_LSP_INTEGRATION.md  HOT_RELOAD_GUIDE.md  HOT_RELOAD_IMPLEMENTATION.md  HOT_RELOAD_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JUNITA_LSP_SETUP.md  LICENSE  PROJECT_PLAN.md  README.md  TESTING_VSCODE_EXTENSION.md  backlog.md  index.html  j.py  junita.toml  print.html  searcher-c2a407aa.js  searchindex-9be82478.js  toc-208d0d01.js  toc.html
crates/blinc_animation/: Cargo.toml
crates/blinc_animation/src/: context.rs  keyframe.rs  lib.rs  presets.rs  scheduler.rs  spring.rs  timeline.rs
crates/blinc_cli/: Cargo.toml  build.rs
crates/blinc_cli/src/: doctor.rs  main.rs  project.rs
crates/blinc_debugger/: COMPONENTS_NEEDED.md  Cargo.toml
crates/blinc_debugger/src/: app.rs  main.rs  theme.rs
crates/blinc_debugger/src/panels/: inspector_panel.rs  mod.rs  preview_panel.rs  timeline_panel.rs  tree_panel.rs
crates/blinc_gpu/: Cargo.toml
crates/blinc_gpu/src/: gradient_texture.rs  image.rs  lib.rs  paint.rs  path.rs  primitives.rs  renderer.rs  shaders.rs  text.rs
crates/blinc_gpu/src/shaders/: image.wgsl
crates/blinc_icons/: Cargo.toml  build.rs
crates/blinc_icons/src/: lib.rs
crates/blinc_paint/: Cargo.toml
crates/blinc_paint/src/: gradient.rs
crates/blinc_runtime/: Cargo.toml
crates/blinc_test_suite/: Cargo.toml
crates/blinc_test_suite/src/: harness.rs  runner.rs
crates/blinc_test_suite/src/tests/: glass.rs  layout.rs  mod.rs  text.rs
crates/blinc_theme/: Cargo.toml
crates/blinc_theme/src/: lib.rs  state.rs  watcher.rs
crates/blinc_theme/src/platform/: android.rs  macos.rs  mod.rs  windows.rs
crates/blinc_theme/src/themes/: blinc.rs  mod.rs
crates/blinc_theme/src/tokens/: animation.rs  color.rs  mod.rs  shadow.rs  typography.rs
crates/junita_animation/: Cargo.toml  README.md
crates/junita_animation/src/: context.rs  lib.rs  presets.rs  scheduler.rs  spring.rs  values.rs
crates/junita_app/: CHANGELOG.md  Cargo.toml  README.md
crates/junita_app/examples/: canvas_demo.rs  carousel_demo.rs  cn_demo.rs  code_demo.rs  code_test.rs  complex_svg_demo.rs  css_parser_demo.rs  effects_demo.rs  emoji_demo.rs  fuchsia_hello.rs  image_layer_test.rs  keyframe_canvas.rs  markdown_demo.rs  motion_demo.rs  notch_demo.rs  overlay_demo.rs  rich_text_demo.rs  scroll.rs  stateful_demo.rs  table_demo.rs  text_position_test.rs  text_widgets.rs  text_wrap_test.rs  theme_demo.rs  timeline_demo.rs  typography_demo.rs  windowed.rs
crates/junita_app/src/: android.rs  app.rs  context.rs  error.rs  fuchsia.rs  ios.rs  lib.rs  tests.rs  text_measurer.rs  windowed.rs
crates/junita_cli/: Cargo.toml  README.md  build.rs
crates/junita_cli/src/: compiler.rs  config.rs  doctor.rs  hot_reload.rs  main.rs  project.rs
crates/junita_cn/: Cargo.toml  README.md
crates/junita_cn/src/: component_id.rs  lib.rs
crates/junita_cn/src/components/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  (+37 more)
crates/junita_core/: Cargo.toml  README.md
crates/junita_core/src/: context.rs  context_state.rs  draw.rs  hot_reload.rs  lib.rs  native_bridge.rs  reactive.rs  rendering.rs  runtime.rs  store.rs
crates/junita_core/tests/: reactive_animation_integration.rs
crates/junita_debugger/: COMPONENTS_NEEDED.md  Cargo.toml  README.md
crates/junita_debugger/src/: app.rs  main.rs  theme.rs
crates/junita_gpu/: Cargo.toml  README.md
crates/junita_gpu/src/: gpu_backend.rs  gradient_texture.rs  lib.rs  paint.rs  particles.rs  path.rs  primitives.rs  renderer.rs  shaders.rs  text.rs
crates/junita_icons/: Cargo.toml  README.md  build.rs
crates/junita_icons/src/: icons.rs  lib.rs
crates/junita_image/: Cargo.toml  README.md
crates/junita_image/src/: error.rs  lib.rs  loader.rs
crates/junita_layout/: CHANGELOG.md  Cargo.toml  README.md
crates/junita_layout/src/: animated.rs  canvas.rs  css_parser.rs  diff.rs  div.rs  element.rs  element_style.rs  event_handler.rs  event_router.rs  image.rs  interactive.rs  layout_animation.rs  lib.rs  motion.rs  notch.rs  overlay_state.rs  recorder_bridge.rs  render_state.rs  renderer.rs  stack.rs  stateful.rs  styled_text.rs  svg.rs  syntax.rs  text.rs  text_selection.rs  tree.rs  typography.rs  units.rs  visual_animation.rs
crates/junita_macros/: Cargo.toml  README.md
crates/junita_macros/src/: lib.rs
crates/junita_paint/: Cargo.toml  README.md
crates/junita_paint/src/: color.rs  context.rs  gradient.rs  lib.rs  path.rs  primitives.rs
crates/junita_platform/: Cargo.toml  README.md
crates/junita_platform/src/: assets.rs  event.rs  lib.rs  window.rs
crates/junita_recorder/: Cargo.toml  README.md
crates/junita_recorder/src/: lib.rs
crates/junita_runtime/: Cargo.toml  README.md
crates/junita_runtime/src/: lib.rs
crates/junita_svg/: Cargo.toml  README.md
crates/junita_svg/src/: document.rs  lib.rs  path.rs  rasterize.rs  style.rs
crates/junita_test_suite/: Cargo.toml  README.md
crates/junita_test_suite/src/: harness.rs  lib.rs  main.rs
extensions/blinc_platform_android/: CHANGELOG.md  Cargo.toml
extensions/blinc_platform_android/src/: assets.rs  jni_bridge.rs  lib.rs
extensions/junita_platform_android/: CHANGELOG.md  Cargo.toml  README.md
extensions/junita_platform_android/src/: activity.rs  assets.rs  event_loop.rs  input.rs  jni_bridge.rs  lib.rs  native_bridge.rs  window.rs
extensions/junita_platform_android/templates/: JunitaNativeBridge.kt
extensions/junita_platform_harmony/: Cargo.toml  README.md
extensions/junita_platform_harmony/src/: app.rs  assets.rs  event_loop.rs  input.rs  lib.rs  napi_bridge.rs  window.rs
extensions/junita_platform_ios/: CHANGELOG.md  Cargo.toml  README.md
extensions/junita_platform_ios/src/: app.rs  assets.rs  event_loop.rs  input.rs  lib.rs  native_bridge.rs  window.rs
extensions/junita_platform_ios/swift/: Junita-Bridging-Header.h  JunitaViewController.swift  README.md
extensions/junita_platform_ios/templates/: JunitaNativeBridge.swift
(+445 files in other folders)
