[package]
name = "blinc_debugger"
description = "Visual debugger app for Blinc UI recordings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_debugger"
rust-version.workspace = true

[[bin]]
name = "blinc-debugger"
path = "src/main.rs"

[dependencies]
# Blinc crates
blinc_app = { path = "../blinc_app", version = "0.1.12" }
blinc_layout = { path = "../blinc_layout", version = "0.1.12" }
blinc_theme = { path = "../blinc_theme", version = "0.1.12" }
blinc_cn = { path = "../blinc_cn", version = "0.1.12" }
blinc_icons = { path = "../blinc_icons", version = "0.1.12" }
blinc_recorder = { path = "../blinc_recorder", version = "0.1.12" }
blinc_animation = { path = "../blinc_animation", version = "0.1.12" }
blinc_core = { path = "../blinc_core", version = "0.1.12" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# CLI args
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
