[package]
name = "blinc_paint"
description = "Blinc Paint/Canvas API - 2D drawing primitives and path rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "paint", "canvas", "blinc"]
categories = ["gui", "graphics"]

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# Core types (unified with blinc_core)
blinc_core = { path = "../blinc_core", version = "0.1.1" }

# GPU types (shared with blinc_gpu)
bytemuck.workspace = true

# Data structures
smallvec.workspace = true

# Logging
tracing.workspace = true
