[package]
name = "blinc_test_suite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Visual test suite for Blinc UI framework rendering capabilities"

[lib]
crate-type = ["lib"]

[[bin]]
name = "blinc-visual-tests"
path = "src/main.rs"

[features]
default = []
# Enable interactive window tests (requires display)
interactive = []

[dependencies]
# Core Blinc crates
blinc_core = { path = "../blinc_core", version = "0.1.1" }
blinc_gpu = { path = "../blinc_gpu", version = "0.1.1" }
blinc_layout = { path = "../blinc_layout", version = "0.1.1" }
blinc_paint = { path = "../blinc_paint", version = "0.1.1" }
blinc_text = { path = "../blinc_text", version = "0.1.1" }
blinc_svg = { path = "../blinc_svg", version = "0.1.1" }

# GPU and windowing
wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
pollster.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Image comparison for visual regression tests
image = "0.25"
png = "0.17"

# Benchmarks (uncomment when ready)
# [dev-dependencies]
# criterion.workspace = true
#
# [[bench]]
# name = "render_benchmarks"
# harness = false
