[package]
name = "junita_cli"
description = "Junita UI Framework CLI - build, run, and hot-reload Junita applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_cli"
rust-version.workspace = true

[[bin]]
name = "junita"
path = "src/main.rs"

[dependencies]
junita_core = { path = "../junita_core", version = "0.1.12" }
junita_animation = { path = "../junita_animation", version = "0.1.12" }

# CLI
clap.workspace = true

# File watching for hot reload
notify.workspace = true

# Async
tokio.workspace = true

# Config
toml.workspace = true
serde.workspace = true
serde_json.workspace = true

# Errors
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# System paths
dirs = "5.0"
