[package]
name = "junita_core"
description = "Junita core runtime - reactive signals, state machines, and event dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_core"
rust-version.workspace = true
keywords = ["ui", "gui", "reactive", "signals", "junita"]
categories = ["gui"]

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# Data structures
slotmap.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true

# Errors
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
junita_animation = { path = "../junita_animation", version = "0.1.12" }

# Benchmarks will be added later
# criterion.workspace = true

# [[bench]]
# name = "reactive"
# harness = false
