[package]
name = "junita_debugger"
description = "Visual debugger app for Junita UI recordings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_debugger"
rust-version.workspace = true

[[bin]]
name = "junita-debugger"
path = "src/main.rs"

[dependencies]
# Junita crates
junita_app = { path = "../junita_app", version = "0.1.12" }
junita_layout = { path = "../junita_layout", version = "0.1.12" }
junita_theme = { path = "../junita_theme", version = "0.1.12" }
junita_cn = { path = "../junita_cn", version = "0.1.12" }
junita_icons = { path = "../junita_icons", version = "0.1.12" }
junita_recorder = { path = "../junita_recorder", version = "0.1.12" }
junita_animation = { path = "../junita_animation", version = "0.1.12" }
junita_core = { path = "../junita_core", version = "0.1.12" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# CLI args
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
