[package]
name = "junita_recorder"
description = "Recording and debugging infrastructure for Junita applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_recorder"
rust-version.workspace = true

[features]
default = []
png = ["dep:png"]

[dependencies]
png = { version = "0.17", optional = true }
junita_core = { path = "../junita_core", version = "0.1.12" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
