[package]
name = "junita_svg"
description = "SVG loading and rendering for Junita UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_svg"
rust-version.workspace = true
keywords = ["ui", "gui", "svg", "junita"]
categories = ["gui", "graphics"]

[dependencies]
junita_core = { path = "../junita_core", version = "0.1.12" }
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"
thiserror = "2.0"
