[package]
name = "blinc_platform_android"
description = "Blinc Android platform - native activity, JNI bridge, and input handling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_platform_android"
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["gpu"]
gpu = []
zrtl-plugin = []
# Enable the default android_main entry point (not recommended for custom apps)
default-activity = []

[dependencies]
# Core dependencies (always available)
blinc_core = { path = "../../crates/blinc_core", version = "0.1.12" }
blinc_animation = { path = "../../crates/blinc_animation", version = "0.1.12" }
blinc_platform = { path = "../../crates/blinc_platform", version = "0.1.12" }

# Logging (platform-independent)
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"

# Android-specific dependencies (only when targeting Android)
[target.'cfg(target_os = "android")'.dependencies]
blinc_gpu = { path = "../../crates/blinc_gpu", version = "0.1.12", default-features = false, features = ["vulkan"], optional = true }

# Android NDK
ndk.workspace = true
android-activity.workspace = true
jni.workspace = true

# Android logging
android_logger = "0.14"

# Encoding
base64 = "0.22"
