[package]
name = "junita_platform_harmony"
description = "Junita HarmonyOS platform - XComponent integration, N-API bridge, and Vulkan rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/junita_platform_harmony"
rust-version.workspace = true
keywords = ["ui", "gui", "harmonyos", "ohos", "junita"]
categories = ["gui"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("ohos"))'] }

[lib]
crate-type = ["lib", "cdylib"]  # cdylib for N-API native module

[features]
default = []
gles = []  # OpenGL ES fallback for older devices

[dependencies]
# Core dependencies (always available)
junita_core = { path = "../../crates/junita_core", version = "0.1.12" }
junita_animation = { path = "../../crates/junita_animation", version = "0.1.12" }
junita_platform = { path = "../../crates/junita_platform", version = "0.1.12" }

# Logging
tracing.workspace = true

# HarmonyOS N-API bindings (similar to Node.js N-API)
# Note: These will be available when building with OHOS SDK
# napi = "2"
# napi-derive = "2"

# GPU (Vulkan preferred, GLES fallback)
# [target.'cfg(target_os = "ohos")'.dependencies]
# junita_gpu = { path = "../../crates/junita_gpu", version = "0.1.12", default-features = false, features = ["vulkan"] }
